k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkup-backend
  labels:
    app: linkup-backend
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: linkup-backend
